--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_system
-spring.datasource.username=FDS_ADMIN
-spring.datasource.password=metsyssdf
+spring.datasource.url=jdbc:mysql://root:pRcKeEhjhtxfhuhPSExAPHjmbNfExAry@caboose.proxy.rlwy.net:15229/railway
+spring.datasource.username=root
+spring.datasource.password=pRcKeEhjhtxfhuhPSExAPHjmbNfExAry
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
